debian12 github ci runner: use opens option in dbtool in jobs #2